# dde-workspace

./: .gitignore  .gitignore.save  .gitignore~  CMakeLists.txt  README.md  app_white_list.ini  deepin-desktop.desktop  desktop  desktop.c  desktop.html  makefile  new  old  project.config  systray.c  taskbar  taskbar.c  taskbar.html  tray
app/: CMakeLists.txt
app/app_tray/: CMakeLists.txt  deepin-apptray.desktop  main.c  main.h  na-tray-child.c  na-tray-manager.c  na-tray-manager.h  na-tray.c  region.c  region.h  tray.c  tray.h  tray_guard_window.c  tray_guard_window.h  tray_hide.c  tray_hide.h
app/app_tray/jsc/: dbus.go
app/dbus_test/: CMakeLists.txt  dbus_introspect_test.c  dbus_object_test.c  js_gen.py  new.py  py_gen.py  web.c
app/dbus_test/jsc/: dbus_introspect.c
app/default_terminal/: CMakeLists.txt
app/desktop/: CMakeLists.txt  X_misc.c  X_misc.h  background.c  background_util.c  background_util.h  bg-tmp.c  change_background.c  cmd_handler.c  dbus.c  dbus.h  dde-desktop.desktop  deepin-desktop.desktop  desktop.c  desktop.h  desktop_change_background.c  desktop_item_monitor.c  desktop_operation_ui.c  desktop_test.c  desktop_utils.c  desktop_utils.h  file_operation.c  inotify_item.c  inotify_item.h  plugin.c  proxy.c  trash.c  utils.c
app/desktop/desktop_test/: CMakeLists.txt  desktop_test.c
app/desktop/jsc/: dbus.go  desktop.c  desktop.cfg  dfile.cfg  init.c  make_dbus
app/desktop/test/: CMakeLists.txt  desktop_test.c  desktop_test.h  desktop_test_before.c  desktop_test_entry.c  desktop_test_fileops_clipboard.c  desktop_test_fileops_delete.c  desktop_test_fileops_error_dialog.c  desktop_test_fileops_trash.c  (+22 more)
app/dock/: CMakeLists.txt  com.deepin.dde.dock.gschema.xml  date_time.c  date_time.h  dbus.c  dbus.h  deepin-dock.desktop  dock.c  dock.h  dock_config.c  dock_config.h  dock_hide.c  dock_hide.h  dock_test.c  dominant_color.c  dominant_color.h  draw.c  embed_window.c  handle_icon.c  handle_icon.h  launcher.c  launcher.h  migration.c  monitor.c  monitor.h  region.c  region.h  special_window.c  special_window.h  switcher.c  tasklist.c  tasklist.h  tray.c  tray.h  trayicons.c  trayicons.h  workspace.c  workspace.h
app/dominant_color/: CMakeLists.txt  a.c  calc.c  calc.h  main.c  test.c
app/greeter/: CMakeLists.txt  account.c  account.h  background.c  background.h  camera.c  camera.h  com.deepin.dde.lock.service  com.deepin.dde.screenlock.Frontend.service  connection.c  connection.h  demo-greeter.c  dlock.c  draw.c  greeter.c  greeter_util.c  greeter_util.h  gs-grab.c  has_camera.c  keyboard.c  keyboard.h  lightdmservice.c  lock.c  lock_util.c  lock_util.h  lockservice.c  mouse.c  mutils.c  mutils.h  power.c  reco  session.c  session.h  settings.c  settings.h  startsession.c  switchtogreeter.c  theme.c  theme.h  unlockcheck.c  (+2 more)
app/guide/: CMakeLists.txt  guide.c  helper.c
app/lang-selector/: CMakeLists.txt  deepin-greeter-language-selection.desktop  greeter.c  greeter_util.c
app/language/: CMakeLists.txt  DBUS_greeter.h  greeter.c
app/language-selector/: CMakeLists.txt  greeter.c  greeter_util.c  lightdmservice.c
app/launcher/: CMakeLists.txt  background.c  background.h  bg.c  category.c  category.h  com.deepin.dde.launcher.service  config.c  config.h  dbus.c  deepin-launcher.desktop  file_monitor.c  file_monitor.h  item.c  item.h  launcher.c  launcher.h  launcher_category.c  launcher_category.h  menu_test.c  uninstall.c  uninstall.h  x_category.c  x_category.h
app/lock/: CMakeLists.txt  lock.c  unlockcheck.c
app/lowpower/: CMakeLists.txt  config.ini  lowpower.c
app/memory_test/: CMakeLists.txt  js  main.c  test.c
app/osd/: CMakeLists.txt  com.deepin.dde.osd.service  dde-osd.desktop  deepin-osd.desktop  osd.c
app/shutdown/: CMakeLists.txt  background.c  background.h  com.deepin.dde.shutdown.conf  com.deepin.dde.shutdown.service  logoutdialog.c  powerchoose.c  rebootdialog.c  session.c  session.h  shutdown.c  shutdowndialog.c
app/taskbar/: CMakeLists.txt  main.c  taskbar.c  taskbar.h  tray_manager.c  tray_manager.h
app/zone/: CMakeLists.txt  com.deepin.dde.zone.service  set-compiz-gsettings.c  zone.c  zone.h
lib/: CMakeLists.txt  LauncherInspectorWindow.c  X_misc.c  X_misc.h  a.out  background.c  background.h  bg_pixbuf.c  category.c  category.h  config.h  dcore.c  dcore.h  dcore.list  ddesktop.h  desktop_action.c  desktop_entry.c  desktop_file_matcher.c  desktop_file_matcher.h  display_info.c  display_info.h  dwebview.h  forward_window.c  forward_window.h  gs-grab-x11.c  gs-grab.h  i18n.c  i18n.h  jsc_gen.py  marshal.c  marshal.h  pixbuf.c  pixbuf.h  session_register.c  session_register.h  set.c  set.h  taskbar.c  taskbar.h  templates.c  (+13 more)
lib/dbus/: CMakeLists.txt  dbus.c  dbus_introspect.c  dbus_introspect.h  dbus_js_convert.c  dbus_js_convert.h  dbus_object_info.c  dbus_object_info.h
lib/dentry/: CMakeLists.txt  dentry.cfg  eel.c  eel.h  entry.c  entry.h  enums.h  fileops.c  fileops.h  fileops_clipboard.c  fileops_clipboard.h  fileops_confirm_trash.c  fileops_delete.c  fileops_delete.h  fileops_error_dialog.c  fileops_error_dialog.h  fileops_error_reporting.c  fileops_error_reporting.h  fileops_trash.c  fileops_trash.h  gnome-desktop-thumbnail.c  mime_actions.c  mime_actions.h  nautilus_file_operations.c  nautilus_file_operations.h  templates.c  templates.h  thumbnails.c  thumbnails.h
lib/fileops/: dfile.cfg  fileinfo.c  fileops.c  fileops.h  gfile.cfg
lib/jsc_extension/: dbus.c  dbus_introspect.c  dbus_js_convert.c  dcore.c  dcore.cfg  desktop_entry.c  desktop_entry.h  desktop_item_monitor.c  forward_window.c  init.c  jsc_gen.py  jsextension.c  jsextension.h  json.c  object.c  signal.c
lib/launchable/: launchable.c  launchable.cfg
lib/patch/: renderdiv.cpp
po/: CMakeLists.txt  af.po  af_ZA.po  am.po  ar.po  ar_AA.po  ar_EG.po  ar_SA.po  ar_SY.po  az.po  bg.po  ca.po  cs.po  da.po  dde-workspace.pot  dde.pot  de.po  de_AT.po  de_DE.po  el.po  el_GR.po  en_AU.po  en_US.po  es.po  es_419.po  es_AR.po  es_CL.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  fi.po  fr.po  gl.po  gl_ES.po  he.po  hr.po  hu.po  hy.po  (+30 more)
(+666 files in other folders)
